--- a/index.html
+++ b/index.html
@@ -4,14 +4,18 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Quiz IHC - Sumaré</title>
+
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
+
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 	<a class="waves-effect waves-light btn">button</a>
 	<a class="waves-effect waves-light btn"><i class="material-icons left">cloud</i>button</a>
 	<a class="waves-effect waves-light btn"><i class="material-icons right">cloud</i>button</a>
-        
+
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
+	<script type="text/javascript" src="js/script.js"></script>
 </body>
 </html>
