--- a/index.html
+++ b/index.html
@@ -11,10 +11,27 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-	<a class="waves-effect waves-light btn">button</a>
-	<a class="waves-effect waves-light btn"><i class="material-icons left">cloud</i>button</a>
-	<a class="waves-effect waves-light btn"><i class="material-icons right">cloud</i>button</a>
-
+	<header>Quiz IHC</header>
+	<main>
+		<div class="row">
+			<div class="col s12">
+				Este quiz possui 10 questões fáceis e rápidas de responder. Cada uma vale 10 pontos.
+			</div>
+			<div class="col s6">
+				<a class="waves-effect waves-light btn">Vamos jogar!</a>
+			</div>
+			<div class="col s6">
+				<a href="">Jogar</a>
+			</div>
+	    </div>
+	</main>
+	<footer class="page-footer">
+		<div class="footer-copyright">
+			<div class="container">
+				Criadores: Filipe, Honorio, Jefferson, Juliana
+			</div>
+		</div>
+    </footer>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
 	<script type="text/javascript" src="js/script.js"></script>
 </body>
