adicionadas as questoes

--- a/jogo2q10.html
+++ b/jogo2q10.html
@@ -17,23 +17,13 @@
 	<main class="center-align">
 		<div class="row">
 			<div class="col s12 intro">
-				Este quiz possui 10 questões simples e rápidas de responder. Cada uma vale 10 pontos.
+				10- O que é labrador? raça de gato, raça de gado, raça de cachorro, raça de cavalo
 			</div>
-			<div class="col s6">
-				<a class="waves-effect blue darken-1 btn" href="jogo1q1.html">Vamos jogar!</a>
-			</div>
-			<div class="col s6 btn2">
-				<a href="jogo2q1.html">Jogar</a>
+			<div class="col s12">
+				<a class="waves-effect blue darken-1 btn" href="resultado.html">Resultado</a>
 			</div>
 	    </div>
 	</main>
-	<footer class="page-footer red darken-2">
-		<div class="footer-copyright">
-			<div class="container">
-				Criadores: Filipe, Honório, Jefferson, Juliana
-			</div>
-		</div>
-	</footer>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
 	<script type="text/javascript" src="js/script.js"></script>
 </body>
