--- a/resultado.html
+++ b/resultado.html
@@ -17,13 +17,10 @@
 	<main class="center-align">
 		<div class="row">
 			<div class="col s12 intro">
-				Este quiz possui 10 questões simples e rápidas de responder. Cada uma vale 10 pontos.
+				Resultado
 			</div>
-			<div class="col s6">
-				<a class="waves-effect blue darken-1 btn" href="jogo1q1.html">Vamos jogar!</a>
-			</div>
-			<div class="col s6 btn2">
-				<a href="jogo2q1.html">Jogar</a>
+			<div class="col s12">
+				<a class="waves-effect blue darken-1 btn" href="index.html">Início</a>
 			</div>
 	    </div>
 	</main>
