--- a/jogo2q1.html
+++ b/jogo2q1.html
@@ -17,23 +17,17 @@
 	<main class="center-align">
 		<div class="row">
 			<div class="col s12 intro">
-				Este quiz possui 10 questões simples e rápidas de responder. Cada uma vale 10 pontos.
-			</div>
-			<div class="col s6">
-				<a class="waves-effect blue darken-1 btn" href="jogo1q1.html">Vamos jogar!</a>
+				1- Selecione o próximo número da sequência: Dois, Quatro, Oito, Dezesseis, Trinta e dois, __
+				(scroll na tela para ver a pergunta)
 			</div>
 			<div class="col s6 btn2">
-				<a href="jogo2q1.html">Jogar</a>
+				<a href="jogo2q2.html">Próximo</a>
+			</div>
+			<div class="col s6 btn2">
+				<a href="jogo2q2.html">Pular</a>
 			</div>
 	    </div>
 	</main>
-	<footer class="page-footer red darken-2">
-		<div class="footer-copyright">
-			<div class="container">
-				Criadores: Filipe, Honório, Jefferson, Juliana
-			</div>
-		</div>
-	</footer>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
 	<script type="text/javascript" src="js/script.js"></script>
 </body>
