--- a/jogo1q1.html
+++ b/jogo1q1.html
@@ -24,25 +24,25 @@
 					<p>
 						<label>
 							<input name="group1" type="radio"/>
-							<span>Red</span>
+							<span>96</span>
 						</label>
 					</p>
 					<p>
 						<label>
 							<input name="group1" type="radio"/>
-							<span>Yellow</span>
+							<span>128</span>
 						</label>
 					</p>
 					<p>
 						<label>
 							<input name="group1" type="radio"/>
-							<span>Green</span>
+							<span>64</span>
 						</label>
 					</p>
 					<p>
 						<label>
 							<input name="group1" type="radio"/>
-							<span>Brown</span>
+							<span>38</span>
 						</label>
 					</p>
 				</form>
