--- a/jogo1q10.html
+++ b/jogo1q10.html
@@ -16,8 +16,40 @@
 	</header>
 	<main class="center-align">
 		<div class="row">
-			<div class="col s12 intro">
-				10- O que é labrador? raça de gato, raça de gado, raça de cachorro, raça de cavalo (com fotos)
+			<div class="col s12 intro jogo1q10">
+				10- O que é labrador? (com fotos na resposta)
+			</div>
+			<div class="col s12 left-align options">
+				<form action="#">
+					<p>
+						<label>
+							<img src="img/gato.jpg">
+							<input name="group1" type="radio"/>
+							<span>Raça de gato</span>
+						</label>
+					</p>
+					<p>
+						<label>
+							<img src="img/gado.jpg">
+							<input name="group1" type="radio"/>
+							<span>Raça de gado</span>
+						</label>
+					</p>
+					<p>
+						<label>
+							<img src="img/cao.jpg">
+							<input name="group1" type="radio"/>
+							<span>Raça de cachorro</span>
+						</label>
+					</p>
+					<p>
+						<label>
+							<img src="img/cavalo.jpg">
+							<input name="group1" type="radio"/>
+							<span>Raça de cavalo</span>
+						</label>
+					</p>
+				</form>
 			</div>
 			<div class="col s12">
 				<a class="waves-effect blue darken-1 btn" href="resultado.html">Resultado</a>
