--- a/jogo1q2.html
+++ b/jogo1q2.html
@@ -20,6 +20,34 @@
 				2- Quais são as letras que completam a sequência a seguir? <br>
 				J, F, M, A, M, J, J, A, __, __, __, D
 			</div>
+			<div class="col s12 left-align options">
+				<form action="#">
+					<p>
+						<label>
+							<input name="group1" type="radio"/>
+							<span>O, S, N</span>
+						</label>
+					</p>
+					<p>
+						<label>
+							<input name="group1" type="radio"/>
+							<span>S, O, N</span>
+						</label>
+					</p>
+					<p>
+						<label>
+							<input name="group1" type="radio"/>
+							<span>N, O, S</span>
+						</label>
+					</p>
+					<p>
+						<label>
+							<input name="group1" type="radio"/>
+							<span>S, N, O</span>
+						</label>
+					</p>
+				</form>
+			</div>
 			<div class="col s6">
 				<a class="waves-effect blue darken-1 btn" href="jogo1q3.html">Próximo</a>
 			</div>
