--- a/jogo1q3.html
+++ b/jogo1q3.html
@@ -17,7 +17,35 @@
 	<main class="center-align">
 		<div class="row">
 			<div class="col s12 intro">
-				3- Quantos espaços tem no Jogo da Velha? seis, sete, oito, nove
+				3- Quantos espaços tem no Jogo da Velha?
+			</div>
+			<div class="col s12 left-align options">
+				<form action="#">
+					<p>
+						<label>
+							<input name="group1" type="radio"/>
+							<span>Seis</span>
+						</label>
+					</p>
+					<p>
+						<label>
+							<input name="group1" type="radio"/>
+							<span>Sete</span>
+						</label>
+					</p>
+					<p>
+						<label>
+							<input name="group1" type="radio"/>
+							<span>Oito</span>
+						</label>
+					</p>
+					<p>
+						<label>
+							<input name="group1" type="radio"/>
+							<span>Nove</span>
+						</label>
+					</p>
+				</form>
 			</div>
 			<div class="col s6">
 				<a class="waves-effect blue darken-1 btn" href="jogo1q4.html">Próximo</a>
