--- a/jogo1q4.html
+++ b/jogo1q4.html
@@ -16,8 +16,40 @@
 	</header>
 	<main class="center-align">
 		<div class="row">
-			<div class="col s12 intro">
-				4- Qual NÃO é um instrumento de corda? violao, charango, banjo, balalaica, fagote (com fotos)
+			<div class="col s12 intro jogo1q4">
+				4- Qual NÃO é um instrumento de corda?
+			</div>
+			<div class="col s12 left-align options">
+				<form action="#">
+					<p>
+						<label>
+							<img src="img/violao.jpg">
+							<input name="group1" type="radio"/>
+							<span>Violão</span>
+						</label>
+					</p>
+					<p>
+						<label>
+							<img src="img/charango.jpg">
+							<input name="group1" type="radio"/>
+							<span>Charango</span>
+						</label>
+					</p>
+					<p>
+						<label>
+							<img src="img/fagote.jpg">
+							<input name="group1" type="radio"/>
+							<span>Fagote</span>
+						</label>
+					</p>
+					<p>
+						<label>
+							<img src="img/balalaica.jpg">
+							<input name="group1" type="radio"/>
+							<span>Balalaica</span>
+						</label>
+					</p>
+				</form>
 			</div>
 			<div class="col s6">
 				<a class="waves-effect blue darken-1 btn" href="jogo1q5.html">Próximo</a>
