--- a/jogo1q5.html
+++ b/jogo1q5.html
@@ -17,7 +17,35 @@
 	<main class="center-align">
 		<div class="row">
 			<div class="col s12 intro">
-				5- De quantos anos é constituido um seculo?
+				5- De quantos anos é constituido um século?
+			</div>
+			<div class="col s12 left-align options">
+				<form action="#">
+					<p>
+						<label>
+							<input name="group1" type="radio"/>
+							<span>10</span>
+						</label>
+					</p>
+					<p>
+						<label>
+							<input name="group1" type="radio"/>
+							<span>1000</span>
+						</label>
+					</p>
+					<p>
+						<label>
+							<input name="group1" type="radio"/>
+							<span>50</span>
+						</label>
+					</p>
+					<p>
+						<label>
+							<input name="group1" type="radio"/>
+							<span>100</span>
+						</label>
+					</p>
+				</form>
 			</div>
 			<div class="col s6">
 				<a class="waves-effect blue darken-1 btn" href="jogo1q6.html">Próximo</a>
