--- a/jogo1q6.html
+++ b/jogo1q6.html
@@ -17,7 +17,35 @@
 	<main class="center-align">
 		<div class="row">
 			<div class="col s12 intro">
-				6- Segundo os contos, qual animal ao ser beijado se transforma em príncipe? Cavalo, cao, gato, sapo
+				6- Segundo os contos, qual animal ao ser beijado se transforma em príncipe?
+			</div>
+			<div class="col s12 left-align options">
+				<form action="#">
+					<p>
+						<label>
+							<input name="group1" type="radio"/>
+							<span>Sapo</span>
+						</label>
+					</p>
+					<p>
+						<label>
+							<input name="group1" type="radio"/>
+							<span>Cão</span>
+						</label>
+					</p>
+					<p>
+						<label>
+							<input name="group1" type="radio"/>
+							<span>Gato</span>
+						</label>
+					</p>
+					<p>
+						<label>
+							<input name="group1" type="radio"/>
+							<span>Cavalo</span>
+						</label>
+					</p>
+				</form>
 			</div>
 			<div class="col s6">
 				<a class="waves-effect blue darken-1 btn" href="jogo1q7.html">Próximo</a>
