--- a/jogo1q8.html
+++ b/jogo1q8.html
@@ -17,7 +17,35 @@
 	<main class="center-align">
 		<div class="row">
 			<div class="col s12 intro">
-				8- Como são chamados os pedaços de gelo que caem durante a chuva? granizo, neve, raio
+				8- Como são chamados os pedaços de gelo que caem durante a chuva?
+			</div>
+			<div class="col s12 left-align options">
+				<form action="#">
+					<p>
+						<label>
+							<input name="group1" type="radio"/>
+							<span>Neve</span>
+						</label>
+					</p>
+					<p>
+						<label>
+							<input name="group1" type="radio"/>
+							<span>Raio</span>
+						</label>
+					</p>
+					<p>
+						<label>
+							<input name="group1" type="radio"/>
+							<span>Picolé</span>
+						</label>
+					</p>
+					<p>
+						<label>
+							<input name="group1" type="radio"/>
+							<span>Granizo</span>
+						</label>
+					</p>
+				</form>
 			</div>
 			<div class="col s6">
 				<a class="waves-effect blue darken-1 btn" href="jogo1q9.html">Próximo</a>
