--- a/jogo1q9.html
+++ b/jogo1q9.html
@@ -17,7 +17,35 @@
 	<main class="center-align">
 		<div class="row">
 			<div class="col s12 intro">
-				9- O que Rapunzel jogava pela janela (foto na pergunta)? sapato, confete, trança, braço
+				9- O que Rapunzel jogava pela janela?
+			</div>
+			<div class="col s12 left-align options">
+				<form action="#">
+					<p>
+						<label>
+							<input name="group1" type="radio"/>
+							<span>Sapato</span>
+						</label>
+					</p>
+					<p>
+						<label>
+							<input name="group1" type="radio"/>
+							<span>Confete</span>
+						</label>
+					</p>
+					<p>
+						<label>
+							<input name="group1" type="radio"/>
+							<span>Trança</span>
+						</label>
+					</p>
+					<p>
+						<label>
+							<input name="group1" type="radio"/>
+							<span>Braço</span>
+						</label>
+					</p>
+				</form>
 			</div>
 			<div class="col s6">
 				<a class="waves-effect blue darken-1 btn" href="jogo1q10.html">Próximo</a>
