--- a/jogo2q1.html
+++ b/jogo2q1.html
@@ -10,15 +10,42 @@
 
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
-<body>
+<body style="background-color:yellow">
 	<header class="red darken-2 center-align">
 		<a href="index.html">Quiz IHC</a>
 	</header>
 	<main class="center-align">
 		<div class="row">
-			<div class="col s12 intro">
+			<div class="col s12 intro left-align jogo2q1">
 				1- Selecione o próximo número da sequência: Dois, Quatro, Oito, Dezesseis, Trinta e dois, __
-				(scroll na tela para ver a pergunta)
+			</div>
+			<div class="col s12 left-align options">
+				<form action="#">
+					<p>
+						<label>
+							<input name="group1" type="radio"/>
+							<span>Noventa e seis</span>
+						</label>
+					</p>
+					<p>
+						<label>
+							<input name="group1" type="radio"/>
+							<span>Cento e vinte e oito</span>
+						</label>
+					</p>
+					<p>
+						<label>
+							<input name="group1" type="radio"/>
+							<span>Sessenta e quatro</span>
+						</label>
+					</p>
+					<p>
+						<label>
+							<input name="group1" type="radio"/>
+							<span>Trinta e oito</span>
+						</label>
+					</p>
+				</form>
 			</div>
 			<div class="col s6 btn2">
 				<a href="jogo2q2.html">Próximo</a>
