--- a/jogo2q10.html
+++ b/jogo2q10.html
@@ -10,14 +10,42 @@
 
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
-<body>
+<body style="background-color:blue">
 	<header class="red darken-2 center-align">
 		<a href="index.html">Quiz IHC</a>
 	</header>
 	<main class="center-align">
 		<div class="row">
 			<div class="col s12 intro">
-				10- O que é labrador? raça de gato, raça de gado, raça de cachorro, raça de cavalo
+				10- O que é labrador?
+			</div>
+			<div class="col s12 left-align options">
+				<form action="#">
+					<p>
+						<label>
+							<input name="group1" type="radio"/>
+							<span>Raça de gato</span>
+						</label>
+					</p>
+					<p>
+						<label>
+							<input name="group1" type="radio"/>
+							<span>Raça de gado</span>
+						</label>
+					</p>
+					<p>
+						<label>
+							<input name="group1" type="radio"/>
+							<span>Raça de cachorro</span>
+						</label>
+					</p>
+					<p>
+						<label>
+							<input name="group1" type="radio"/>
+							<span>Raça de cavalo</span>
+						</label>
+					</p>
+				</form>
 			</div>
 			<div class="col s12">
 				<a class="waves-effect blue darken-1 btn" href="resultado.html">Resultado</a>
