--- a/jogo2q2.html
+++ b/jogo2q2.html
@@ -10,13 +10,13 @@
 
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
-<body>
+<body style="background-color:pink">
 	<header class="red darken-2 center-align">
 		<a href="index.html">Quiz IHC</a>
 	</header>
 	<main class="center-align">
 		<div class="row">
-			<div class="col s12 intro">
+			<div class="col s12 intro left-align">
 				2- Quais são as letras que completam a sequência a seguir? <br>
 				J, <br>
 				F, <br>
@@ -30,6 +30,50 @@
 				__, <br>
 				__, <br>
 				D
+			</div>
+			<div class="col s12 left-align options">
+				<form action="#">
+					<p>
+						<label>
+							<input name="group1" type="radio"/>
+							<span>
+								O, <br>
+								S, <br>
+								N
+							</span>
+						</label>
+					</p>
+					<p>
+						<label>
+							<input name="group1" type="radio"/>
+							<span>
+								S, <br>
+								O, <br>
+								N
+							</span>
+						</label>
+					</p>
+					<p>
+						<label>
+							<input name="group1" type="radio"/>
+							<span>
+								N, <br>
+								O, <br>
+								S
+							</span>
+						</label>
+					</p>
+					<p>
+						<label>
+							<input name="group1" type="radio"/>
+							<span>
+								S, <br>
+								N, <br>
+								O
+							</span>
+						</label>
+					</p>
+				</form>
 			</div>
 			<div class="col s6 btn2">
 				<a href="jogo2q3.html">Próximo</a>
