--- a/jogo2q6.html
+++ b/jogo2q6.html
@@ -10,14 +10,42 @@
 
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
-<body>
+<body style="background-color:red">
 	<header class="red darken-2 center-align">
 		<a href="index.html">Quiz IHC</a>
 	</header>
 	<main class="center-align">
 		<div class="row">
 			<div class="col s12 intro">
-				6- Segundo os contos, qual animal ao ser beijado se transforma em príncipe? Cavalo, cao, gato, sapo (contar uma historia longa)
+				6-  Essa história, baseada no conto dos irmãos Grimm reproduz as experiências de crianças que tentam fugir à responsabilidade de seus próprios atos. Conta a história de uma princesa caprichosa e teimosa, que se compromete com uma promessa impensada, que não pretende cumprir. Neste conto de fadas, uma princesa mimada chamada Tiana conhece um sapo possivelmente encontrando-o após deixar uma bola de ouro cair em sua lagoa que ela relutantemente tem de hospedar em seu castelo, onde ele se transforma magicamente em um belo príncipe, que era antes de ser enfeitiçado pela bruxa malvada. Assinale o animal que está presente na história:
+			</div>
+			<div class="col s12 left-align options">
+				<form action="#">
+					<p>
+						<label>
+							<input name="group1" type="radio"/>
+							<span>Sapo</span>
+						</label>
+					</p>
+					<p>
+						<label>
+							<input name="group1" type="radio"/>
+							<span>Cão</span>
+						</label>
+					</p>
+					<p>
+						<label>
+							<input name="group1" type="radio"/>
+							<span>Gato</span>
+						</label>
+					</p>
+					<p>
+						<label>
+							<input name="group1" type="radio"/>
+							<span>Cavalo</span>
+						</label>
+					</p>
+				</form>
 			</div>
 			<div class="col s6 btn2">
 				<a href="jogo2q7.html">Próximo</a>
