--- a/jogo2q7.html
+++ b/jogo2q7.html
@@ -10,14 +10,42 @@
 
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
-<body>
+<body style="background-color:yellow">
 	<header class="red darken-2 center-align">
 		<a href="index.html">Quiz IHC</a>
 	</header>
 	<main class="center-align">
 		<div class="row">
 			<div class="col s12 intro">
-				7- Em qual cidade está localizada a estátua da Liberdade? toronto, washignton, new york, london
+				7- Em qual cidade está localizada a estátua da Liberdade?
+			</div>
+			<div class="col s12 left-align options">
+				<form action="#">
+					<p>
+						<label>
+							<input name="group1" type="radio"/>
+							<span>Toronto</span>
+						</label>
+					</p>
+					<p>
+						<label>
+							<input name="group1" type="radio"/>
+							<span>Washington</span>
+						</label>
+					</p>
+					<p>
+						<label>
+							<input name="group1" type="radio"/>
+							<span>New York</span>
+						</label>
+					</p>
+					<p>
+						<label>
+							<input name="group1" type="radio"/>
+							<span>London</span>
+						</label>
+					</p>
+				</form>
 			</div>
 			<div class="col s6 btn2">
 				<a href="jogo2q8.html">Próximo</a>
