--- a/jogo2q8.html
+++ b/jogo2q8.html
@@ -10,14 +10,42 @@
 
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
-<body>
+<body style="background-color:pink">
 	<header class="red darken-2 center-align">
 		<a href="index.html">Quiz IHC</a>
 	</header>
 	<main class="center-align">
 		<div class="row">
 			<div class="col s12 intro">
-				8- Conjunto de partículas que ao entrar em contato com o ar frio modifica seu estado passando do estado líquido para o sólido granizo, neve, raio
+				8- Conjunto de partículas que ao entrar em contato com o ar frio modifica seu estado passando do estado líquido para o sólido:
+			</div>
+			<div class="col s12 left-align options">
+				<form action="#">
+					<p>
+						<label>
+							<input name="group1" type="radio"/>
+							<span>Neve</span>
+						</label>
+					</p>
+					<p>
+						<label>
+							<input name="group1" type="radio"/>
+							<span>Raio</span>
+						</label>
+					</p>
+					<p>
+						<label>
+							<input name="group1" type="radio"/>
+							<span>Picolé</span>
+						</label>
+					</p>
+					<p>
+						<label>
+							<input name="group1" type="radio"/>
+							<span>Granizo</span>
+						</label>
+					</p>
+				</form>
 			</div>
 			<div class="col s6 btn2">
 				<a href="jogo2q9.html">Próximo</a>
