--- a/jogo2q9.html
+++ b/jogo2q9.html
@@ -10,14 +10,34 @@
 
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
-<body>
+<body style="background-color:purple">
 	<header class="red darken-2 center-align">
 		<a href="index.html">Quiz IHC</a>
 	</header>
 	<main class="center-align">
 		<div class="row">
 			<div class="col s12 intro">
-				9- O que Rapunzel jogava pela janela (foto na pergunta)? sapato, confete, trança, braço (respostas coladas)
+				9- O que Rapunzel jogava pela janela?
+			</div>
+			<div class="col s12 left-align options">
+				<form action="#">
+					<label>
+						<input name="group1" type="radio"/>
+						Sapato
+					</label>
+					<label>
+						<input name="group1" type="radio"/>
+						Confete
+					</label>
+					<label>
+						<input name="group1" type="radio"/>
+						Trança
+					</label>
+					<label>
+						<input name="group1" type="radio"/>
+						Braço
+					</label>
+				</form>
 			</div>
 			<div class="col s6 btn2">
 				<a href="jogo2q10.html">Próximo</a>
