--- a/jogo2q3.html
+++ b/jogo2q3.html
@@ -10,14 +10,42 @@
 
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
-<body>
+<body style="background-color:red">
 	<header class="red darken-2 center-align">
 		<a href="index.html">Quiz IHC</a>
 	</header>
 	<main class="center-align">
 		<div class="row">
 			<div class="col s12 intro">
-				3- Quantos espaços tem no Jogo da Velha? SEIS, sete, oito, nove (uma resposta errada em destaque e um bg muito poluido)
+				3- Quantos espaços tem no Jogo da Velha?
+			</div>
+			<div class="col s12 left-align options">
+				<form action="#" class="jogo2q3">
+					<p>
+						<label>
+							<input name="group1" type="radio"/>
+							<span class="seis">Seis</span>
+						</label>
+					</p>
+					<p>
+						<label>
+							<input name="group1" type="radio"/>
+							<span>Sete</span>
+						</label>
+					</p>
+					<p>
+						<label>
+							<input name="group1" type="radio"/>
+							<span>Oito</span>
+						</label>
+					</p>
+					<p>
+						<label>
+							<input name="group1" type="radio"/>
+							<span>Nove</span>
+						</label>
+					</p>
+				</form>
 			</div>
 			<div class="col s6 btn2">
 				<a href="jogo2q4.html">Próximo</a>
