--- a/jogo2q5.html
+++ b/jogo2q5.html
@@ -10,14 +10,42 @@
 
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
-<body>
+<body style="background-color:beige">
 	<header class="red darken-2 center-align">
 		<a href="index.html">Quiz IHC</a>
 	</header>
 	<main class="center-align">
 		<div class="row">
 			<div class="col s12 intro">
-				5- De quantos anos é constituido um seculo? (em potencia)
+				5- De quantos anos é constituido um século?
+			</div>
+			<div class="col s12 left-align options">
+				<form action="#">
+					<p>
+						<label>
+							<input name="group1" type="radio"/>
+							10
+						</label>
+					</p>
+					<p>
+						<label>
+							<input name="group1" type="radio"/>
+							1000
+						</label>
+					</p>
+					<p>
+						<label>
+							<input name="group1" type="radio"/>
+							50
+						</label>
+					</p>
+					<p>
+						<label>
+							<input name="group1" type="radio"/>
+							100
+						</label>
+					</p>
+				</form>
 			</div>
 			<div class="col s6 btn2">
 				<a href="jogo2q6.html">Próximo</a>
