--- a/jogo2q4.html
+++ b/jogo2q4.html
@@ -9,10 +9,22 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
 
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+
+	<!-- Google Analytics -->
+	<script>
+	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+	ga('create', 'UA-116940676-1', 'auto');
+	ga('send', 'pageview');
+	</script>
+	<!-- End Google Analytics -->
 </head>
 <body style="background-color:brown">
 	<header class="red darken-2 center-align">
-		<a href="index.html">Quiz IHC</a>
+		<a href="index.html" onclick="ga('send', 'event', 'header', 'inicio', 'jogo2q4');">Quiz IHC</a>
 	</header>
 	<main class="center-align">
 		<div class="row">
@@ -47,11 +59,11 @@
 					</p>
 				</form>
 			</div>
-			<div class="col s6 btn2">
-				<a href="jogo2q5.html">Próximo</a>
+			<div class="col s6">
+				<a class="waves-effect blue darken-1 btn" href="jogo2q5.html" onclick="ga('send', 'event', 'jogo2', 'proximo', 'q4');">Próximo</a>
 			</div>
 			<div class="col s6 btn2">
-				<a href="jogo2q5.html">Pular</a>
+				<a href="jogo2q5.html" onclick="ga('send', 'event', 'jogo2', 'pular', 'q4');">Pular</a>
 			</div>
 	    </div>
 	</main>
