--- a/resultado.html
+++ b/resultado.html
@@ -9,10 +9,22 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
 
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+
+	<!-- Google Analytics -->
+	<script>
+	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+	ga('create', 'UA-116940676-1', 'auto');
+	ga('send', 'pageview');
+	</script>
+	<!-- End Google Analytics -->
 </head>
 <body>
 	<header class="red darken-2 center-align">
-		<a href="index.html">Quiz IHC</a>
+		<a href="index.html" onclick="ga('send', 'event', 'header', 'inicio', 'resultado');">Quiz IHC</a>
 	</header>
 	<main class="center-align">
 		<div class="row">
@@ -20,7 +32,7 @@
 				Resultado
 			</div>
 			<div class="col s12">
-				<a class="waves-effect blue darken-1 btn" href="index.html">Início</a>
+				<a class="waves-effect blue darken-1 btn" href="index.html" onclick="ga('send', 'event', 'resultado', 'inicio', 'resultado');">Início</a>
 			</div>
 	    </div>
 	</main>
