implementando soma de pontos

--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
 				Este quiz possui 10 questões simples e rápidas de responder. Cada uma vale 10 pontos.
 			</div>
 			<div class="col s6">
-				<a class="waves-effect blue darken-1 btn" href="jogo1q1.html" onclick="ga('send', 'event', 'jogo1', 'vamos jogar', 'home');">Vamos jogar!</a>
+				<a class="waves-effect blue darken-1 btn" href="jogo1q1.html" onclick="ga('send', 'event', 'jogo1', 'vamos jogar', 'home');localStorage.setItem('pontos', 0);">Vamos jogar!</a>
 			</div>
 			<div class="col s6 btn2">
-				<a href="jogo2q1.html" onclick="ga('send', 'event', 'jogo2', 'jogar', 'home');">Jogar</a>
+				<a href="jogo2q1.html" onclick="ga('send', 'event', 'jogo2', 'jogar', 'home');localStorage.setItem('pontos', 0);">Jogar</a>
 			</div>
 	    </div>
 	</main>
