--- a/jogo1q1.html
+++ b/jogo1q1.html
@@ -21,6 +21,9 @@
 	ga('send', 'pageview');
 	</script>
 	<!-- End Google Analytics -->
+	<script>
+		localStorage.setItem('pontos', 0);
+	</script>
 </head>
 <body>
 	<header class="red darken-2 center-align">
