funcionalidade total pontos

--- a/jogo1q10.html
+++ b/jogo1q10.html
@@ -50,7 +50,7 @@
 					<p>
 						<label>
 							<img src="img/cao.jpg">
-							<input name="group1" type="radio"/>
+							<input name="group1" type="radio" id="certo"/>
 							<span>Raça de cachorro</span>
 						</label>
 					</p>
@@ -64,7 +64,7 @@
 				</form>
 			</div>
 			<div class="col s12">
-				<a class="waves-effect blue darken-1 btn" href="resultado.html" onclick="ga('send', 'event', 'jogo1', 'ver resultado', 'q10');"> Ver resultado</a>
+				<a class="waves-effect blue darken-1 btn" href="resultado.html" onclick="ga('send', 'event', 'jogo1', 'ver resultado', 'q10');confere('jogo1');"> Ver resultado</a>
 			</div>
 	    </div>
 	</main>
