--- a/jogo1q2.html
+++ b/jogo1q2.html
@@ -42,7 +42,7 @@
 					</p>
 					<p>
 						<label>
-							<input name="group1" type="radio"/>
+							<input name="group1" type="radio" id="certo"/>
 							<span>S, O, N</span>
 						</label>
 					</p>
@@ -61,7 +61,7 @@
 				</form>
 			</div>
 			<div class="col s6">
-				<a class="waves-effect blue darken-1 btn" href="jogo1q3.html" onclick="ga('send', 'event', 'jogo1', 'proximo', 'q2');">Próximo</a>
+				<a class="waves-effect blue darken-1 btn" href="jogo1q3.html" onclick="ga('send', 'event', 'jogo1', 'proximo', 'q2');confere();">Próximo</a>
 			</div>
 			<div class="col s6 btn2">
 				<a href="jogo1q3.html" onclick="ga('send', 'event', 'jogo1', 'pular', 'q2');">Pular</a>
