--- a/jogo1q4.html
+++ b/jogo1q4.html
@@ -50,7 +50,7 @@
 					<p>
 						<label>
 							<img src="img/fagote.jpg">
-							<input name="group1" type="radio"/>
+							<input name="group1" type="radio" id="certo"/>
 							<span>Fagote</span>
 						</label>
 					</p>
@@ -64,7 +64,7 @@
 				</form>
 			</div>
 			<div class="col s6">
-				<a class="waves-effect blue darken-1 btn" href="jogo1q5.html" onclick="ga('send', 'event', 'jogo1', 'proximo', 'q4');">Próximo</a>
+				<a class="waves-effect blue darken-1 btn" href="jogo1q5.html" onclick="ga('send', 'event', 'jogo1', 'proximo', 'q4');confere();">Próximo</a>
 			</div>
 			<div class="col s6 btn2">
 				<a href="jogo1q5.html" onclick="ga('send', 'event', 'jogo1', 'pular', 'q4');">Pular</a>
