--- a/jogo1q7.html
+++ b/jogo1q7.html
@@ -41,7 +41,7 @@
 					</p>
 					<p>
 						<label>
-							<input name="group1" type="radio"/>
+							<input name="group1" type="radio" id="certo"/>
 							<span>Nova York</span>
 						</label>
 					</p>
@@ -60,7 +60,7 @@
 				</form>
 			</div>
 			<div class="col s6">
-				<a class="waves-effect blue darken-1 btn" href="jogo1q8.html" onclick="ga('send', 'event', 'jogo1', 'proximo', 'q7');">Próximo</a>
+				<a class="waves-effect blue darken-1 btn" href="jogo1q8.html" onclick="ga('send', 'event', 'jogo1', 'proximo', 'q7');confere();">Próximo</a>
 			</div>
 			<div class="col s6 btn2">
 				<a href="jogo1q8.html" onclick="ga('send', 'event', 'jogo1', 'pular', 'q7');">Pular</a>
