--- a/jogo1q9.html
+++ b/jogo1q9.html
@@ -47,7 +47,7 @@
 					</p>
 					<p>
 						<label>
-							<input name="group1" type="radio"/>
+							<input name="group1" type="radio" id="certo"/>
 							<span>Trança</span>
 						</label>
 					</p>
@@ -60,7 +60,7 @@
 				</form>
 			</div>
 			<div class="col s6">
-				<a class="waves-effect blue darken-1 btn" href="jogo1q10.html" onclick="ga('send', 'event', 'jogo1', 'proximo', 'q9');">Próximo</a>
+				<a class="waves-effect blue darken-1 btn" href="jogo1q10.html" onclick="ga('send', 'event', 'jogo1', 'proximo', 'q9');confere();">Próximo</a>
 			</div>
 			<div class="col s6 btn2">
 				<a href="jogo1q10.html" onclick="ga('send', 'event', 'jogo1', 'pular', 'q9');">Pular</a>
