--- a/jogo2q10.html
+++ b/jogo2q10.html
@@ -47,7 +47,7 @@
 					</p>
 					<p>
 						<label>
-							<input name="group1" type="radio"/>
+							<input name="group1" type="radio" id="certo"/>
 							<span>Raça de cachorro</span>
 						</label>
 					</p>
@@ -60,7 +60,7 @@
 				</form>
 			</div>
 			<div class="col s12">
-				<a class="waves-effect blue darken-1 btn" href="resultado.html" onclick="ga('send', 'event', 'jogo2', 'ver resultado', 'q10');"> Ver resultado</a>
+				<a class="waves-effect blue darken-1 btn" href="resultado.html" onclick="ga('send', 'event', 'jogo2', 'ver resultado', 'q10');confere('jogo2');"> Ver resultado</a>
 			</div>
 	    </div>
 	</main>
