--- a/jogo2q4.html
+++ b/jogo2q4.html
@@ -47,7 +47,7 @@
 					</p>
 					<p>
 						<label>
-							<input name="group1" type="radio"/>
+							<input name="group1" type="radio" id="certo"/>
 							<span>Fagote</span>
 						</label>
 					</p>
@@ -60,7 +60,7 @@
 				</form>
 			</div>
 			<div class="col s6">
-				<a class="waves-effect blue darken-1 btn" href="jogo2q5.html" onclick="ga('send', 'event', 'jogo2', 'proximo', 'q4');">Próximo</a>
+				<a class="waves-effect blue darken-1 btn" href="jogo2q5.html" onclick="ga('send', 'event', 'jogo2', 'proximo', 'q4');confere();">Próximo</a>
 			</div>
 			<div class="col s6 btn2">
 				<a href="jogo2q5.html" onclick="ga('send', 'event', 'jogo2', 'pular', 'q4');">Pular</a>
