--- a/jogo2q5.html
+++ b/jogo2q5.html
@@ -53,14 +53,14 @@
 					</p>
 					<p>
 						<label>
-							<input name="group1" type="radio"/>
+							<input name="group1" type="radio" id="certo"/>
 							100
 						</label>
 					</p>
 				</form>
 			</div>
 			<div class="col s6">
-				<a class="waves-effect blue darken-1 btn" href="jogo2q6.html" onclick="ga('send', 'event', 'jogo2', 'proximo', 'q5');">Próximo</a>
+				<a class="waves-effect blue darken-1 btn" href="jogo2q6.html" onclick="ga('send', 'event', 'jogo2', 'proximo', 'q5');confere();">Próximo</a>
 			</div>
 			<div class="col s6 btn2">
 				<a href="jogo2q6.html" onclick="ga('send', 'event', 'jogo2', 'pular', 'q5');">Pular</a>
