--- a/jogo2q6.html
+++ b/jogo2q6.html
@@ -35,7 +35,7 @@
 				<form action="#">
 					<p>
 						<label>
-							<input name="group1" type="radio"/>
+							<input name="group1" type="radio" id="certo"/>
 							<span>Sapo</span>
 						</label>
 					</p>
@@ -60,7 +60,7 @@
 				</form>
 			</div>
 			<div class="col s6">
-				<a class="waves-effect blue darken-1 btn" href="jogo2q7.html" onclick="ga('send', 'event', 'jogo2', 'proximo', 'q6');">Próximo</a>
+				<a class="waves-effect blue darken-1 btn" href="jogo2q7.html" onclick="ga('send', 'event', 'jogo2', 'proximo', 'q6');confere();">Próximo</a>
 			</div>
 			<div class="col s6 btn2">
 				<a href="jogo2q7.html" onclick="ga('send', 'event', 'jogo2', 'pular', 'q6');">Pular</a>
