--- a/jogo2q9.html
+++ b/jogo2q9.html
@@ -42,7 +42,7 @@
 						Confete
 					</label>
 					<label>
-						<input name="group1" type="radio"/>
+						<input name="group1" type="radio" id="certo"/>
 						Trança
 					</label>
 					<label>
@@ -52,7 +52,7 @@
 				</form>
 			</div>
 			<div class="col s6">
-				<a class="waves-effect blue darken-1 btn" href="jogo2q10.html" onclick="ga('send', 'event', 'jogo2', 'proximo', 'q9');">Próximo</a>
+				<a class="waves-effect blue darken-1 btn" href="jogo2q10.html" onclick="ga('send', 'event', 'jogo2', 'proximo', 'q9');confere();">Próximo</a>
 			</div>
 			<div class="col s6 btn2">
 				<a href="jogo2q10.html" onclick="ga('send', 'event', 'jogo2', 'pular', 'q9');">Pular</a>
