--- a/jogo1q3.html
+++ b/jogo1q3.html
@@ -53,14 +53,14 @@
 					</p>
 					<p>
 						<label>
-							<input name="group1" type="radio"/>
+							<input name="group1" type="radio" id="certo"/>
 							<span>Nove</span>
 						</label>
 					</p>
 				</form>
 			</div>
 			<div class="col s6">
-				<a class="waves-effect blue darken-1 btn" href="jogo1q4.html" onclick="ga('send', 'event', 'jogo1', 'proximo', 'q3');">Próximo</a>
+				<a class="waves-effect blue darken-1 btn" href="jogo1q4.html" onclick="ga('send', 'event', 'jogo1', 'proximo', 'q3');confere();">Próximo</a>
 			</div>
 			<div class="col s6 btn2">
 				<a href="jogo1q4.html" onclick="ga('send', 'event', 'jogo1', 'pular', 'q3');">Pular</a>
