--- a/jogo2q2.html
+++ b/jogo2q2.html
@@ -57,7 +57,7 @@
 					</p>
 					<p>
 						<label>
-							<input name="group1" type="radio"/>
+							<input name="group1" type="radio" id="certo"/>
 							<span>
 								S, <br>
 								O, <br>
@@ -88,7 +88,7 @@
 				</form>
 			</div>
 			<div class="col s6">
-				<a class="waves-effect blue darken-1 btn" href="jogo2q3.html" onclick="ga('send', 'event', 'jogo2', 'proximo', 'q2');">Próximo</a>
+				<a class="waves-effect blue darken-1 btn" href="jogo2q3.html" onclick="ga('send', 'event', 'jogo2', 'proximo', 'q2');confere();">Próximo</a>
 			</div>
 			<div class="col s6 btn2">
 				<a href="jogo2q3.html" onclick="ga('send', 'event', 'jogo2', 'pular', 'q2');">Pular</a>
